# poke-sim

./: Cargo.toml  README.md  battle_sim.html  index.html  index.js  stat_calculator.html
common/src/: battle.rs  lib.rs  moves.rs  pokemon.rs  stats.rs  test.rs
data/: pokemon.json
input/: staryu.json
src/: lib.rs  main.rs  pokemon.rs  stats.rs  test.rs  wasm_load.rs
wasm/: Cargo.toml
wasm/src/: lib.rs  load.rs  misc.rs
