[package]
name = "poke-sim"
authors = ["doobent"]
version = "0.1.0"
edition = "2018"
description = "Simple pokemon battle simulator for wasm"
readme = "README.md"
repository = "https://github.com/doobent/poke-sim"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen = "0.2.78"

[profile.release]
opt-level = "s"