[package]
name = "poke-sim"
authors = ["doobent"]
version = "0.1.0"
edition = "2018"
description = "Simple pokemon battle simulator for wasm"
readme = "README.md"
repository = "https://github.com/doobent/poke-sim"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]



[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
wee_alloc = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde_json = "1.0"

[profile.release]
opt-level = "s"