[package]
name = "poke-sim"
authors = ["doobent"]
version = "0.1.0"
edition = "2018"
description = "Simple pokemon battle simulator"
readme = "README.md"
repository = "https://github.com/doobent/poke-sim"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
common = { path = "common" }