[package]
name = "poke-sim"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
wee_alloc = { version = "0.4", optional = true }
common = { path = "../common" }

[profile.release]
opt-level = "s"